# iceberg-c

./: .cmake-format.json  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: clang-format-check.yml  cmake-format-check.yml  run-ctest.yml
cmake/modules/: BuildArrow.cmake  BuildAvro.cmake  BuildBoost.cmake  BuildORC.cmake  BuildUtf8proc.cmake  FindThrift.cmake  FindZstd.cmake  Findsnappy.cmake  Findutf8proc.cmake
src/: CMakeLists.txt  field.cc  partitioning.cc  result.cc  schema.cc  snapshot.cc  status.cc  transform.cc  type.cc
src/include/iceberg/: field.hh  generic_record.hh  partitioning.hh  result.hh  schema.hh  snapshot.hh  sorting.hh  status.hh  table.hh  transform.hh  type.hh  visit_type_inline.hh  visitor_generate.hh
src/include/iceberg/io/: file.hh  file_io.hh  filesystem.hh  interfaces.hh  local_file_io.hh  localfs.hh
src/include/iceberg/util/: aligned_storage.hh  checked_cast.hh  compare.hh  logging.hh  macros.hh  ostreamable.hh  snapshot_id_generator.hh  string_builder.hh  vector_util.hh  visibility.hh
src/io/: file.cc  file_io.cc  filesystem.cc  interfaces.cc  local_file_io.cc  localfs.cc
src/util/: logging.cc  murmur_hash3.cc  string_builder.cc
test/: CMakeLists.txt  field_and_type_test.cc  result_test.cc  schema_test.cc  status_test.cc
test/io/: CMakeLists.txt  local_file_io_test.cc  localfs_test.cc
test/util/: CMakeLists.txt  checked_cast_test.cc  logging_test.cc  snapshot_id_generator_test.cc
